--- a/client-app2/package.json
+++ b/client-app2/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.2",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
-    "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.21.4",
     "mobx": "^6.3.7",
     "mobx-react-lite": "^3.2.2",
+    "nightwind": "^1.1.12",
     "react": "^17.0.1",
-    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.1",
@@ -27,9 +29,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -51,6 +53,9 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.0"
+    "@types/uuid": "^8.3.0",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
