--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,10 +13,13 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.21.4",
+    "date-fns": "^2.27.0",
+    "formik": "^2.2.9",
     "mobx": "^6.3.7",
     "mobx-react-lite": "^3.2.2",
     "react": "^17.0.1",
     "react-calendar": "^3.5.0",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.1",
@@ -25,7 +28,8 @@
     "semantic-ui-react": "^2.0.1",
     "typescript": "^4.1.2",
     "uuid": "^8.3.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.0"
+    "@types/react-datepicker": "^4.3.2",
+    "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.13"
   }
 }
